# IntelRag

./: .gitattributes  .gitignore  README.md  project-context.md
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/brainstorm-rag-customer-it-spend-2026-06-23/: .memlog.md  brainstorm-intent.md  brainstorm.html  build-task-list.md
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: companies.py  query.py
backend/app/core/: config.py  rag.py
backend/scripts/: ingest.py  test_q10.py  test_queries.py
data/companies/: apex-manufacturing.md  cascade-health.md  meridian-industrial.md  novabridge-financial.md  stratford-logistics.md  vertex-retail.md
data/industry/: healthcare-digital-transformation.md  it-spend-trends-2025.md  retail-ecommerce-tech-trends.md
data/proposals/: coaching-fintech-team-scaling.md  erp-integration-automotive-supplier.md  fhir-api-healthcare-compliance.md  staff-aug-retail-ecommerce.md
docs/: localhost-config-needs.md  mac-mini-ollama-setup.md  prototype-setup.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CompanyPanel.tsx
frontend/src/hooks/: useHealthStatus.ts  useQueryHistory.ts
frontend/src/types/: api.ts
